# federated-rocket

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  release.yml  validation.yml
crates/aero/: Cargo.toml
crates/aero/src/: barrowman.rs  body_flaps.rs  compute.rs  interference.rs  lib.rs  ring_fins.rs  supersonic.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  output.rs
crates/cli/src/commands/: convert.rs  info.rs  mod.rs  motors.rs  optimize.rs  simulate.rs
crates/core/: Cargo.toml
crates/core/src/: component.rs  component_tree.rs  coordinate.rs  lib.rs  material.rs  units.rs
crates/fileio/: Cargo.toml
crates/fileio/src/: csv_export.rs  format_detect.rs  lib.rs  ork.rs  rkt.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs
crates/gui/src/panels/: dashboard_panel.rs  design_panel.rs  menu_panel.rs  mod.rs  motor_panel.rs  optimization_panel.rs  plot_panel.rs  results_panel.rs  simulation_panel.rs
crates/math/: Cargo.toml
crates/math/src/: integrator.rs  interpolator.rs  lib.rs  matrix.rs  quaternion.rs  vector.rs
crates/motor-db/: Cargo.toml
crates/motor-db/src/: cache.rs  database.rs  embedded.rs  lib.rs  thrustcurve.rs  types.rs
crates/optimization/: Cargo.toml
crates/optimization/src/: golden_section.rs  lib.rs  multidirectional.rs  simulator.rs  types.rs
crates/physics/: Cargo.toml
crates/physics/src/: atmosphere.rs  constants.rs  gravity.rs  lib.rs  wind.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: derivatives.rs  engine.rs  event_detection.rs  events.rs  lib.rs  motor.rs  state.rs
crates/validation/: Cargo.toml
crates/validation/reference/: simple_rocket.json
crates/validation/src/: compare.rs  lib.rs  reference.rs  test_cases.rs
crates/validation/tests/: benchmarks.rs  validation_tests.rs
docs/: implementation-plan.md  sdd.md  srs.md
