[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/math",
    "crates/physics",
    "crates/aero",
    "crates/simulation",
    "crates/fileio",
    "crates/motor-db",
    "crates/optimization",
    "crates/cli",
    "crates/gui",
    "crates/validation",
]

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
authors = ["Federated Rocket Team"]
description = "A federated rocket simulation and optimization workspace"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
egui = "0.30"
eframe = "0.30"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2", features = ["deflate"] }
csv = "1"
base64 = "0.22"
flate2 = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking"] }
slotmap = { version = "1.0", features = ["serde"] }
serde_json = "1"
federated-rocket-validation = { path = "crates/validation" }
egui_plot = { version = "0.30", features = ["default"] }
