[package]
name = "federated-rocket-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core types and traits for the Federated Rocket project"
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
slotmap.workspace = true

[dev-dependencies]
serde_json.workspace = true
