[package]
name = "federated-rocket-math"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Mathematical utilities for the Federated Rocket project"
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
