[package]
name = "federated-rocket-optimization"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Optimization engine for the Federated Rocket project"
license.workspace = true

[dependencies]
federated-rocket-core = { path = "../core" }
federated-rocket-simulation = { path = "../simulation" }
serde.workspace = true
thiserror.workspace = true
