[package]
name = "federated-rocket-physics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Physics engine for the Federated Rocket project"
license.workspace = true

[dependencies]
federated-rocket-core = { path = "../core" }
federated-rocket-math = { path = "../math" }
serde.workspace = true
thiserror.workspace = true
